// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsBar /> should render as basic 1`] = `
<nav
  className="basic-tab-bar"
>
  <Tab
    active={true}
    label="Home"
  />
  <Tab
    label="Marketing"
  />
  <span
    className="mdc-tab-bar__indicator"
  />
</nav>
`;

exports[`<TabsBar /> should render with icons 1`] = `
<nav
  className="mdc-tab-bar mdc-tab-bar--icon-tab-bar"
>
  <Tab
    active={true}
    icon="home"
  />
  <Tab
    icon="phone"
  />
  <span
    className="mdc-tab-bar__indicator"
  />
</nav>
`;

exports[`<TabsBar /> should render with icons and text 1`] = `
<nav
  className="mdc-tab-bar mdc-tab-bar--icons-with-text"
>
  <Tab
    active={true}
    icon="home"
    label="Home"
  />
  <Tab
    icon="phone"
    label="Marketing"
  />
  <span
    className="mdc-tab-bar__indicator"
  />
</nav>
`;
